--- a/index.html
+++ b/index.html
@@ -1,5 +1,5 @@
 <!doctype html>
-<html lang="en">
+<html lang="en" ng-app='NarrowItDownApp'>
   <head>
     <title>Narrow Down Your Menu Choice</title>
     <meta name="viewport" content="width=device-width, initial-scale=1">
@@ -9,18 +9,28 @@
     <link rel="stylesheet" href="styles/styles.css">
   </head>
 <body>
-   <div class="container">
+   <div class="container" ng-controller='NarrowItDownController as menu'>
     <h1>Narrow Down Your Chinese Menu Choice</h1>
 
-    <div class="form-group">
-      <input type="text" placeholder="search term" class="form-control">
-    </div>
-    <div class="form-group narrow-button">
-      <button class="btn btn-primary">Narrow It Down For Me!</button>
+    <div class="row">
+      <div class="col-md-2">
+        <div class="form-group">
+          <input type="text" id="search-term" placeholder="search term" class="form-control" ng-model="menu.searchTerm">
+        </div>
+      </div>  
+      <div class="col-md-10">
+        <div class="form-group narrow-button">
+          <button class="btn btn-primary" ng-click="menu.searchFor();">Narrow It Down For Me!</button>
+        </div>
+      </div>
     </div>
 
-    <!-- found-items should be implemented as a component -->
-    <found-items found-items="...." on-remove="...."></found-items>
+    <div class="row">
+      <div class="col-md-12">
+        <!-- found-items should be implemented as a component -->
+        <found-items found="menu.items" on-remove="menu.removeItem(index)"></found-items>
+      </div> 
+    </div>
   </div>
 
 </body>
