--- a/foundItems.html
+++ b/foundItems.html
@@ -2,7 +2,9 @@
 <div ng-if="list.isEmpty()">Nothing found</div>
 <ul>
   <li ng-repeat="item in list.found">
-    {{item.name}}, {{item.short_name}}, {{item.description}}
+    <h3>{{item.name}}</h3>
+    <h4>{{item.short_name}}</h4>
+    <p>{{item.description}}</p>
     <button class="btn btn-primary" ng-click="list.onRemove({index: $index});">Don't want this one!</button>
   </li>
 </ul>
